# SLIC-superpixel

./: CMakeLists.txt  README.md  main.cpp  slic.cpp  slic.h
Qt/: SlicThread.cpp  SlicThread.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
data/: result.vsdx
slic/: slic.cpp  slic.h
